src/app/components/project-preview-glowr/project-preview-glowr.component.css
#project {
    height: 100vh;
    min-height: 400px;
    background: #EBEDFF;
}

#background {
    position: relative;
}

#background img {
    position: absolute;
    top: 0px;
    right: 0px;
    height: 90vh;
    width: calc(90vh * 1.23px);
    min-height: 200px;
}

#text {
    position: relative;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    align-content: center;
    /* 100 - scroll heigh - padding top height */
    height: 100vh;
    text-align: center;
    padding-right: 50vw;
}

a {
    text-decoration: none;
}

h1 {
    padding-top: 20vh;
    font-family: Montserrat;
    /* Bold */
    font-weight: 700;
    font-size: calc(30px + 2vw);
    color: #A9B0E8;
    letter-spacing: 0;
    text-align: center;
}

h3 {
    font-family: Montserrat;
    /* Medium */
    font-weight: 500;
    font-size: calc(10px + 1vw);
    color: #6F6F71;
    letter-spacing: 2.3px;
}


h4 {
    font-family: Montserrat;
    /* Semi-Bold */
    font-weight: 600;
    font-size: calc(10px + 1vw);
    color: #707AC4;
    letter-spacing: 0;
}

.case-study-flex {
    display: flex;
    align-items: center;
    justify-content: center;
    align-content: center;
    padding-top: 25%;
}

.case-study-flex img {
    height: calc(10px + 1vw);

}

.case-study-flex > * {
    margin: 10px;
}

@media all and (max-width: 900px) {

    #background img {
        height: unset;
        padding-top: 20vh;
        width: 80vw;
        top: unset;
        position:absolute;
        left: 0;
        right: 0;
        margin: 0 auto;
    }

    #text {
        height: 88vh;
        padding: 0;
        justify-content: flex-end;
    }

    .case-study-flex {
        padding-top: 10px;
    }
}

